--- a/tpl/excursions.html
+++ b/tpl/excursions.html
@@ -1,69 +1,149 @@
-<section class="w-full px-4 lg:px-16 py-12 lg:py-16">
-
-  <div class="flex flex-col lg:flex-row lg:items-end justify-between gap-6 mb-8 lg:mb-10">
-    <div>
-      <h2 class="text-2xl sm:text-3xl lg:text-5xl font-bold text-[#24272A] mb-3">
+<section class="w-full">
+  <div class="px-4 sm:px-6 lg:px-[60px] py-10 sm:py-14 lg:py-[80px]">
+    <!-- Заголовок -->
+    <div class="flex items-start justify-between gap-6 mb-10 sm:mb-12">
+      <h2 class="font-[Racama] text-[40px] sm:text-[56px] lg:text-[72px] leading-[0.95] tracking-[-0.02em] text-[#24272A]">
         Экскурсии
       </h2>
-      <p class="text-sm sm:text-base text-[#5B5D60] max-w-[520px]">
-        Групповые и индивидуальные экскурсии для гостей любого возраста.
-      </p>
+
+      <a
+        href="#"
+        class="hidden sm:inline-flex items-center gap-4 border border-[#24272A]
+               px-6 py-4 text-base font-semibold leading-[160%]
+               transition hover:bg-[#24272A] hover:text-white"
+      >
+        Все экскурсии
+        <span class="w-6 h-6">
+          <include src="/assets/svg/arrow-right.svg"></include>
+        </span>
+      </a>
     </div>
 
-    <!-- Фильтры -->
-    <div class="flex flex-wrap items-center gap-3 text-sm">
-      <button class="px-4 py-2 rounded-full border border-[#DCDEE0] bg-[#24272A] text-white">Все</button>
-      <button class="px-4 py-2 rounded-full border border-[#DCDEE0] hover:bg-[#F7F7F7]">Взрослым</button>
-      <button class="px-4 py-2 rounded-full border border-[#DCDEE0] hover:bg-[#F7F7F7]">Детям</button>
-      <button class="px-4 py-2 rounded-full border border-[#DCDEE0] hover:bg-[#F7F7F7]">Семейные</button>
+    <!-- Фильтр корпусов -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-8">
+      <button class="flex items-center gap-4 px-5 py-4 bg-[#FBEAEA] text-left transition hover:opacity-80">
+        <img src="/assets/img/corps-1.png" class="w-10 h-10 object-cover rounded" alt="">
+        <span class="font-semibold text-[#24272A] leading-[140%]">Главный корпус</span>
+      </button>
+
+      <button class="flex items-center gap-4 px-5 py-4 bg-[#EEF0FF] text-left transition hover:opacity-80">
+        <img src="/assets/img/corps-2.png" class="w-10 h-10 object-cover rounded" alt="">
+        <span class="font-semibold text-[#24272A] leading-[140%]">
+          Ризница Троице-Сергиевской Лавры
+        </span>
+      </button>
+
+      <button class="flex items-center gap-4 px-5 py-4 bg-[#F7F2E9] text-left transition hover:opacity-80">
+        <img src="/assets/img/corps-3.png" class="w-10 h-10 object-cover rounded" alt="">
+        <span class="font-semibold text-[#24272A] leading-[140%]">
+          Музейный комплекс «Конный двор»
+        </span>
+      </button>
+
+      <button class="flex items-center gap-4 px-5 py-4 bg-[#E7EFEA] text-left transition hover:opacity-80">
+        <img src="/assets/img/corps-4.png" class="w-10 h-10 object-cover rounded" alt="">
+        <span class="font-semibold text-[#24272A] leading-[140%]">
+          Краеведческий корпус
+        </span>
+      </button>
+    </div>
+
+    <!-- Типы экскурсий -->
+    <div class="flex flex-wrap gap-4 mb-10">
+      <label class="flex items-center gap-3 border border-[#DCDEE0] px-5 py-4 cursor-pointer hover:bg-[#F0F1F2]">
+        <input type="checkbox" class="w-5 h-5 accent-[#24272A]">
+        <span class="font-semibold">Пенсионеры</span>
+      </label>
+
+      <label class="flex items-center gap-3 border border-[#DCDEE0] px-5 py-4 cursor-pointer hover:bg-[#F0F1F2]">
+        <input type="checkbox" class="w-5 h-5 accent-[#24272A]">
+        <span class="font-semibold">Пешеходная</span>
+      </label>
+
+      <label class="flex items-center gap-3 border border-[#DCDEE0] px-5 py-4 cursor-pointer hover:bg-[#F0F1F2]">
+        <input type="checkbox" class="w-5 h-5 accent-[#24272A]">
+        <span class="font-semibold">Автобусная</span>
+      </label>
+    </div>
+
+    <!-- Карточки экскурсий -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+      <!-- карточка -->
+      <article class="flex flex-col">
+        <img src="/assets/img/exc-1.jpg" alt="" class="w-full h-[240px] object-cover mb-4">
+
+        <div class="flex items-center justify-between mb-2">
+          <span class="font-semibold text-[#24272A]">От 550 ₽ / чел</span>
+          <span class="px-3 py-1 rounded-full bg-[#FBEAEA] text-[#C92E32] text-sm font-semibold">
+            Главный корпус
+          </span>
+        </div>
+
+        <h3 class="font-semibold text-lg leading-[140%] mb-2">
+          Экскурсия по выставке «Любовью и единением спасёмся»
+        </h3>
+
+        <p class="text-sm text-[#6B7280] leading-[160%]">
+          Тематическая экскурсия, знакомящая с земной жизнью великого Святого
+          и традициями его посмертного почитания.
+        </p>
+      </article>
+
+      <!-- карточка -->
+      <article class="flex flex-col">
+        <img src="/assets/img/exc-2.jpg" alt="" class="w-full h-[240px] object-cover mb-4">
+
+        <div class="flex items-center justify-between mb-2">
+          <span class="font-semibold text-[#24272A]">От 550 ₽ / чел</span>
+          <span class="px-3 py-1 rounded-full bg-[#EEF0FF] text-[#7474C2] text-sm font-semibold">
+            Ризница
+          </span>
+        </div>
+
+        <h3 class="font-semibold text-lg leading-[140%] mb-2">
+          Экскурсия по выставке «Любовью и единением спасёмся»
+        </h3>
+
+        <p class="text-sm text-[#6B7280] leading-[160%]">
+          Тематическая экскурсия, знакомящая с земной жизнью великого Святого
+          и традициями его посмертного почитания.
+        </p>
+      </article>
+
+      <!-- карточка -->
+      <article class="flex flex-col">
+        <img src="/assets/img/exc-3.jpg" alt="" class="w-full h-[240px] object-cover mb-4">
+
+        <div class="flex items-center justify-between mb-2">
+          <span class="font-semibold text-[#24272A]">От 550 ₽ / чел</span>
+          <span class="px-3 py-1 rounded-full bg-[#F7F2E9] text-[#A38641] text-sm font-semibold">
+            Конный двор
+          </span>
+        </div>
+
+        <h3 class="font-semibold text-lg leading-[140%] mb-2">
+          Экскурсия по выставке «Любовью и единением спасёмся»
+        </h3>
+
+        <p class="text-sm text-[#6B7280] leading-[160%]">
+          Тематическая экскурсия, знакомящая с земной жизнью великого Святого
+          и традициями его посмертного почитания.
+        </p>
+      </article>
+    </div>
+
+    <!-- мобильная кнопка -->
+    <div class="mt-10 sm:hidden">
+      <a
+        href="#"
+        class="flex items-center justify-center gap-4 border border-[#24272A]
+               px-6 py-4 text-base font-semibold leading-[160%]"
+      >
+        Все экскурсии
+        <span class="w-6 h-6">
+          <include src="/assets/svg/arrow-right.svg"></include>
+        </span>
+      </a>
     </div>
   </div>
-
-  <!-- Карточки -->
-  <div class="grid md:grid-cols-3 gap-6 lg:gap-10">
-
-    <!-- Карточка -->
-    <a href="#" class="block rounded-xl border border-[#DCDEE0] hover:shadow-md transition-shadow duration-300 p-5">
-      <div class="text-xs uppercase tracking-wide text-[#D3423F] font-semibold mb-2">Для взрослых</div>
-      <h3 class="text-lg font-semibold mb-2">История Сергиева Посада</h3>
-      <p class="text-sm text-[#5B5D60] mb-4">
-        Классическая экскурсия по экспозиции.
-      </p>
-
-      <div class="flex items-center justify-between text-sm">
-        <span class="text-[#5B5D60]">1,5 часа</span>
-        <span class="font-semibold">от 500 ₽</span>
-      </div>
-    </a>
-
-    <!-- Карточка -->
-    <a href="#" class="block rounded-xl border border-[#DCDEE0] hover:shadow-md transition-shadow duration-300 p-5">
-      <div class="text-xs uppercase tracking-wide text-[#D3423F] font-semibold mb-2">Для детей</div>
-      <h3 class="text-lg font-semibold mb-2">Сказки и легенды</h3>
-      <p class="text-sm text-[#5B5D60] mb-4">
-        Игровая программа для младших школьников.
-      </p>
-
-      <div class="flex items-center justify-between text-sm">
-        <span class="text-[#5B5D60]">1 час</span>
-        <span class="font-semibold">от 400 ₽</span>
-      </div>
-    </a>
-
-    <!-- Карточка -->
-    <a href="#" class="block rounded-xl border border-[#DCDEE0] hover:shadow-md transition-shadow duration-300 p-5">
-      <div class="text-xs uppercase tracking-wide text-[#D3423F] font-semibold mb-2">Семейная</div>
-      <h3 class="text-lg font-semibold mb-2">Семейный день в музее</h3>
-      <p class="text-sm text-[#5B5D60] mb-4">
-        Общая программа c мастерклассом.
-      </p>
-
-      <div class="flex items-center justify-between text-sm">
-        <span class="text-[#5B5D60]">2 часа</span>
-        <span class="font-semibold">от 800 ₽</span>
-      </div>
-    </a>
-
-  </div>
-
 </section>
