--- a/tpl/tickets-banner.html
+++ b/tpl/tickets-banner.html
@@ -1,18 +1,46 @@
-<section class="w-full bg-[#1C8E4C] text-white px-4 lg:px-16 py-12 lg:py-16">
-  <div class="flex flex-col lg:flex-row justify-between items-center gap-8">
+<section class="w-full">
+  <div class="relative overflow-hidden bg-[#62A37D] text-white">
+    <!-- контейнер -->
+    <div class="px-4 sm:px-6 lg:px-[60px] py-10 sm:py-12 lg:py-[60px]">
+      <div class="relative flex items-center justify-between gap-6">
+        <!-- ЛЕВО: заголовок -->
+        <div class="relative z-10">
+          <h2 class="font-[Racama] text-[56px] sm:text-[72px] lg:text-[96px] leading-[0.9] tracking-[-0.02em]">
+            Купить<br />
+            билет
+          </h2>
+        </div>
 
-    <div>
-      <h2 class="text-2xl sm:text-3xl lg:text-5xl font-bold mb-4">
-        Купить билет онлайн
-      </h2>
-      <p class="text-base sm:text-lg opacity-90 max-w-[540px]">
-        Быстро и удобно приобретайте билеты заранее — без очередей в кассу.
-      </p>
+        <!-- ПРАВО: кнопка -->
+        <div class="relative z-10 flex items-center justify-end">
+          <a
+            href="#"
+            class="inline-flex items-center justify-center gap-4 bg-white text-[#62A37D]
+                   px-6 sm:px-10 lg:px-12 py-4 sm:py-5
+                   w-[260px] sm:w-[340px] lg:w-[520px]
+                   text-base sm:text-lg font-semibold leading-[160%]
+                   border border-white/0
+                   transition
+                   hover:bg-transparent hover:text-white hover:border-white"
+          >
+            Купить билет
+            <span class="w-6 h-6 flex items-center justify-center">
+              <include src="/assets/svg/ticket.svg"></include>
+            </span>
+          </a>
+        </div>
+
+        <!-- ВОДЯНОЙ ЗНАК (как в макете, по центру) -->
+        <div
+          aria-hidden="true"
+          class="pointer-events-none absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2
+                 w-[520px] h-[520px] sm:w-[620px] sm:h-[620px] lg:w-[820px] lg:h-[820px]
+                 opacity-20"
+        >
+          <!-- если у тебя есть большой SVG-узор музея — подключи его сюда -->
+          <include src="/assets/svg/museum-mark.svg"></include>
+        </div>
+      </div>
     </div>
-
-    <button class="bg-white text-[#1C8E4C] px-8 py-3 rounded-xl text-sm sm:text-base font-semibold hover:bg-gray-100 transition">
-      Перейти к покупке
-    </button>
-
   </div>
 </section>
